# aoc

./: Cargo.toml  README.md
aoc-solutions/: Cargo.toml  README.md  build.rs
aoc-solutions/benches/: benchmark.rs
aoc-solutions/src/: day01.rs  day04.rs  day06.rs  day10.rs  day11.rs  day12.rs  lib.rs
aoc-solutions/src/year2020/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
aoc-solutions/src/year2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day20.rs
aoc-solver/: Cargo.toml  README.md
aoc-solver/src/: main.rs
