[package]
name = "aoc-solutions"
version = "0.1.0"
authors = ["Hans Christian Schmitz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
serde = { version = "1.0.118", features = ["derive"] }
envy = "0.4.1"
validator = { version = "0.12", features = ["derive"] }
itertools = "0.9.0"
ndarray = "0.14.0"
aljabar = "1.0.2"

[dev-dependencies]
criterion = { version = "0.3", features = ["real_blackbox"] }
indoc = "1.0"

[lib]
bench = false

[[bench]]
name = "benchmark"
harness = false
