[package]
name = "aoc-solutions"
version = "0.1.0"
authors = ["Hans Christian Schmitz"]
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
envy = "0.4"
validator = { version = "0.14", features = ["derive"] }
itertools = "0.10"
ndarray = "0.15"
cgmath = "0.18"
paste = "1"
array-init = "2"
petgraph = "0.6"

[dev-dependencies]
criterion = { version = "0.3", features = ["real_blackbox"] }
indoc = "1"
paste = "1"

[lib]
bench = false

[[bench]]
name = "benchmark"
harness = false
