[package]
name = "aoc-solver"
version = "0.1.0"
authors = ["Hans Christian Schmitz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
rayon = "1.5.0"
regex = "1.4.2"
serde = { version = "1.0.118", features = ["derive"] }
envy = "0.4.1"
validator = { version = "0.12", features = ["derive"] }
itertools = "0.9.0"
aoc-solutions = { path = "../aoc-solutions" }
