[package]
name = "aoc-solver"
version = "0.1.0"
authors = ["Hans Christian Schmitz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
envy = "0.4"
validator = { version = "0.14", features = ["derive"] }
itertools = "0.10"
aoc-solutions = { path = "../aoc-solutions" }
